--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -40,7 +40,7 @@
     left: 30px;
     top: 5px;
     background: #FFFFFF;
-    background-image: url(https://images.unsplash.com/photo-1584432810601-6c7f27d2362b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80);
+    background-image: url(https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.afro.who.int%2Fsites%2Fdefault%2Ffiles%2F2019-03%2Fd7a94382a75116bb2ab5d1a5204b28.png&imgrefurl=https%3A%2F%2Fwww.afro.who.int%2Fnews%2Fwho-africa-health-forum-shape-next-steps-universal-health-care-continent&tbnid=6rFuctNjYs80bM&vet=12ahUKEwiCiY7Sv6PwAhUBpRoKHUdeAZ8QMygBegUIARDFAQ..i&docid=sKuMt6VfOpui2M&w=1280&h=559&q=health%20care%20africa&ved=2ahUKEwiCiY7Sv6PwAhUBpRoKHUdeAZ8QMygBegUIARDFAQ);
     border-radius: 20px;
     flex: none;
     order: 0;
